study: 보수 이해하기 - 보충
- 보수를 이용한 뺄셈에서 부호 결정 원리 파악

--- a/math/보수.md
+++ b/math/보수.md
@@ -2,6 +2,9 @@
   - [N의 보수, N-1의 보수](#n의-보수-n-1의-보수)
   - [2진수 보수](#2진수-보수)
   - [보수를 이용한 뺄셈](#보수를-이용한-뺄셈)
+    - [N-1의 보수 뺄셈](#n-1의-보수-뺄셈)
+    - [N의 보수 뺄셈](#n의-보수-뺄셈)
+    - [자리올림과 부호](#자리올림과-부호)
 
 # 보수 - (Complement)
 
@@ -36,6 +39,8 @@ N진법에서 자리수가 n인 숫자 num일 때 다음식이 성립한다.
 
 > N의 보수를 구하기 위해 계산하면 받아내림이 발생하기 때문에 비교적 계산이 까다롭다. 따라서 N-1의 보수를 구해서 +1 하는게 쉽다.
 
+> N, N-1의 보수를 구한다음 결과값에 다시 보수를 구하면 원래값이 된다.
+
 <br>
 
 ## 2진수 보수
@@ -50,25 +55,140 @@ N진법에서 자리수가 n인 숫자 num일 때 다음식이 성립한다.
 
 ## 보수를 이용한 뺄셈
 
-보수를 이용하면 덧셈으로 뺄셈은 처리할 수 있다. 계산하는 방법은 다음과 같다.
+보수를 이용하면 덧셈으로 뺄셈을 처리할 수 있다. 계산하는 방법은 각각 다음과 같으며 주의할 점은 보수를 구할 때 자리수는 큰값에 맞춰야 한다.
 
-참고로 뺄셈에서 빼지는 값은 피감수라 하며 빼는 값은 감수라 한다.
+참고로 뺄셈에서 빼지는 값을 피감수, 빼는 값을 감수라한다.
 
-1. 감수의 부호를 무시하고 보수를 구한다.
-2. 피감수와 감수의 보수를 더한다.
-3. 자리올림이 있는 경우 해당 값을 무시하고 양수로 취급한다.
-4. 자리올림이 없는 경우 해당 값의 보수를 계산하고 음수로 취급한다.
+<br>
 
-- **10진수 뺄셈 - 결과가 양수인 경우**  
-$7 - 4 = 3$ 을 보수로 할 경우 감수인 4의 보수 6을 구하고 피감수인 7과 더한다. 결과로 13이 나오는데 자리올림이 발생했기 때문에 해당 자리를 무시하고 양수로 취급한다. 결과는 3이다.
+### N-1의 보수 뺄셈
 
-- **10진수 뺄셈 - 결과가 음수인 경우**  
-$7 - 9 = -2$ 를 보수로 할 경우 감수인 9의 보수 1을 구하고 피감수인 8과 더한다. 결과로 8이 나오는데 자리올림이 없기 때문에 결과값의 보수로 구하여 음수로 취급한다 결과는 -2이다.
+1. 감수의 N-1의 보수를 구한다.
+2. 피감수와 감수의 N-1의 보수를 더한다.
+3. 최상위 자리의 자리올림이 있는 경우 최상위 자리를 무시하고 1을 더한다.
+4. 최상위 자리의 자리올림이 없는 경우 결과에 N-1의 보수를 구한 뒤 부호에 $-$를 붙인다.
 
-- **2진수 뺄셈 - 결과가 양수인 경우**  
-$1101_{(2)} - 0001_{(2)} = 1100_{(2)}$ 을 보수로 할 경우 감수인 $0001_{(2)}$ 의 2의 보수를 구한다. 1의 보수를 구한 뒤 1을 더하면 쉽게 구할 수 있다. 구해진 $1111_{(2)}$ 과 피감수를 더하면 $11100_{(2)}$ 이 나오는데 자리올림이 발생했으므로 해당 자리를 무시하고 양수로 취급한다. 결과는 $1100_{(2)}$ 이다.
+* 10진수 뺄셈 - 결과가 양수인 경우  
+    $$
+    \begin{align}
+    7 - 4 = 3 \\
+    7 + (5) = 12 \\
+    (1)2 \to 2 \\
+    2 + 1 = 3
+    \end{align}
+    $$
+    감수인 4의 9의 보수 5를 구하고 피감수와 더한다. 결과는 12이며 자리올림이 발생했으므로 최상위 자리를 무시하고 1을 더하면 결과값 3을 얻을 수 있다.
 
-- **2진수 뺄셈 - 결과가 음수인 경우**  
-$0011_{(2)} - 1101{(2)} = -1001_{(2)}$ 을 보수로 할 경우 감수인 $1101_{(2)}$ 의 2의 보수를 구하면 $0011_{(2)}$ 이 되며 피감수와 더하면 $0110_{(2)}$ 이 된다. 자리올림이 없으므로 해당 수의 2의 보수를 구한뒤 음수로 취급한다. 결과는 $-1010_{(2)}$ 이다.
+* 10진수 뺄셈 - 결과가 음수인 경우
+    $$
+    \begin{align}
+    4 - 7 = -3 \tag{1} \\
+    4 + (2) = 6 \tag{2} \\
+    6 \to 3 \tag{3} \\
+    3 \to -3 \tag{4}
+    \end{align}
+    $$
+    감수인 7의 9의 보수 2를 구하고 피감수와 더한다. 결과는 6이며 자리올림이 없기 때문에 9의 보수를 구한 뒤 부호에 $-$를 붙이면 결과값 -3을 얻을 수 있다.
 
-> 2진수를 사용하는 컴퓨터에서 보수를 사용하면 양수, 음수를 표현하면서 쉽게 연산을 할 수 있다.
+* 10진수 - 음수끼리 연산
+    $$
+    \begin{align}
+    -4 -7 = -11 \tag{1} \\
+    (95) + (92) = 187 \tag{2} \\
+    (1)87 \to 87 \tag{3} \\
+    87 + 1 = 88 \tag{4} \\
+    11 \to -11
+    \end{align}
+    $$
+
+* 2진수 뺄셈 - 결과가 양수인 경우
+    $$
+    \begin{align}
+    1101_{(2)} - 0010_{(2)} = 1011_{(2)} \tag{1} \\
+    1101_{(2)} + (1101)_{(2)} = 11010_{(2)} \tag{2} \\
+    (1)1010_{(2)} \to 1010_{(2)} \tag{3} \\
+    1010_{(2)} + 0001_{(2)} = 1011_{(2)} \tag{4}
+    \end{align}
+    $$
+    감수인 $0010_{(2)}$의 1의 보수 $1101_{(2)}$를 구하고 피감수와 더한다. 결과는 $11010_{(2)}$이며 자리올림이 발생했으므로 최상위 자리를 무시하고 $0001_{(2)}$을 더하면 결과값 $1011_{(2)}$를 얻을 수 있다.
+
+* 2진수 뺄셈 - 결과가 음수인 경우
+    $$
+    \begin{align}
+    1001_{(2)} - 1110_{(2)} = -0101_{(2)} \tag{1} \\
+    1001_{(2)} + (0001)_{(2)} = 1010_{(2)} \tag{2} \\
+    1010_{(2)} \to 0101_{(2)} \tag{3} \\
+    0101_{(2)} \to -0101_{(2)} \tag{3} \\
+    \end{align}
+    $$
+    감수인 $1110_{(2)}$의 1의 보수 $0001_{(2)}$를 구하고 피감수와 더한다. 결과는 $1010_{(2)}$이며 자리올림이 없기 때문에 1의 보수를 구한 뒤 부호에 $-$를 붙이면 결과값 $-0101_{(2)}$를 얻을 수 있다.
+
+<br>
+
+### N의 보수 뺄셈
+
+1. 감수의 N의 보수를 구한다.
+2. 피감수와 감수의 N의 보수를 더한다.
+3. 최상위 자리의 자리올림이 있는 경우 최상위 자리을 무시한다.
+4. 최상위 자리의 자리올림이 없는 경우 해당 값의 N의 보수를 계산하고 부호에 $-$를 붙인다.
+
+- 10진수 뺄셈 - 결과가 양수인 경우  
+  $$
+  \begin{align}
+  7 - 4 = 3 \tag{1}\\
+  7 + (6) = 13 \tag{2}\\
+  (1)3 \to 3 \tag{3} 
+  \end{align}
+  $$
+  감수인 4의 10의 보수 6을 구하고 피감수와 더한다. 결과는 13이며 자리올림이 발생했으므로 최상위 자리를 무시하면 결과값 3을 얻을 수 있다.
+
+- 10진수 뺄셈 - 결과가 음수인 경우  
+  $$ 
+  \begin{align}
+  4 - 7 = -3 \tag{1} \\
+  4 + (3) = 7 \tag{2} \\
+  7 \to 3 \tag{3} \\ 
+  3 \to -3 \tag{4}
+  \end{align}
+  $$
+  감수인 7의 10의 보수 3을 구하고 피감수와 더한다. 결과는 7이며 자리올림이 없으므로 10의 보수를 구한 뒤 부호에 $-$를 붙이면 결과값 -3을 얻을 수 있다.
+  
+- 2진수 뺄셈 - 결과가 양수인 경우  
+  $$
+  \begin{align}
+  1101_{(2)} - 0001_{(2)} = 1100_{(2)} \tag{1} \\
+  1101_{(2)} + (1111)_{(2)} = 11100_{(2)} \tag{2} \\
+  (1)1100_{(2)} \to 1100_{(2)} \tag{3} \\
+  \end{align}
+  $$
+  $0001_{(2)}$의 2의 보수 $1111_{(2)}$을 구하고 피감수와 더한다. 결과는 $11100_{(2)}$이며 자리올림이 발생했으므로 최상위 자리를 무시하면 결과값인 $1100_{(2)}$을 얻을 수 있다.
+
+- 2진수 뺄셈 - 결과가 음수인 경우  
+  $$
+  \begin{align}
+  0011_{(2)} - 1101_{(2)} = -1010_{(2)} \tag{1} \\
+  0011_{(2)} + (0011)_{(2)} = 0110_{(2)} \tag{2} \\
+  0110_{(2)} \to 1010_{(2)} \tag{3} \\
+  1010_{(2)} \to -1010_{(2)} \tag{4}
+  \end{align}
+  $$
+  $1101_{(2)}$의 2의 보수 $0011_{(2)}$을 구하고 피감수와 더한다. 결과는 $0110_{(2)}$이며 자리올림이 없으므로 2의 보수를 구한 뒤 부호에 $-$를 붙이면 결과값인 $-1010_{(2)}$을 구할 수 있다.
+
+> 보수를 이용할 경우 뺄셈도 덧셈으로 표현 가능하며 곱셈은 덧셈의 연속 나눗셈은 뺄셈의 연속으로 표현 가능하기 때문에 덧셈만 
+가지고도 사칙연산을 모두 처리할 수 있다.
+
+### 자리올림과 부호
+
+보수를 이용해서 뺄셈을 처리할 때는 자리올림 유무에 의해 부호가 결정되는데 이유는 다음과 같다.
+
+**뺄셈의 결과 부호**
+
+뺄셈의 결과 부호는 간단하게 생각해보면 다음과 같다.
+
+* 피감수 $\ge$ 감수인 경우 양수
+* 피감수 $<$ 감수인 경우 음수
+
+**보수의 성질 응용**
+
+* 감수의 N의 보수가 피감수와 더했을 때 자리올림이 발생하면 피감수가 감수보다 크거나 같은것을 의미하며 자리올림이 없는 경우 피감수가 감수보다 작다는 것을 의미한다.
+* 감수의 N-1의 보수가 피감수와 더했을 때 자리올림이 발생하면 피감수가 감수보다 큰것을 의미하며 자리올림이 없는 경우 피감수가 감수보다 작거나 같은것을 의미한다. N-1의 보수는 같은 수를 더할 경우 원래 자리올림이 생기지 않기 때문에 N의 보수와 약간 차이가 있다. (물론 +0이냐 -0이냐 하는 문제기 때문에 큰 영향은 없다.)
