fix: 보수 LaTeX 오류 해결

--- a/math/보수.md
+++ b/math/보수.md
@@ -19,7 +19,7 @@ N진법에서 N의 보수와 N-1의 보수는 다음과 같다.
 * **N의 보수 (진보수)**  
     특정 숫자에 더할 경우 모든 자리에서 올림이 발생하고 해당 자리가 0이 되는 값
 * **N-1의 보수**  
-    결과값의 각 자리가 N-1이 되는 값
+    특정 숫자에 더할 경우 결과값의 각 자리가 N-1이 되는 값
 
 10진수에서 숫자 7, 28일 때 10의 보수(N의 보수)와  9의 보수(N-1의 보수)는 다음과 같다.
 
@@ -77,6 +77,7 @@ N진법에서 자리수가 n인 숫자 num일 때 다음식이 성립한다.
     2 + 1 = 3
     \end{align}
     $$
+
     감수인 4의 9의 보수 5를 구하고 피감수와 더한다. 결과는 12이며 자리올림이 발생했으므로 최상위 자리를 무시하고 1을 더하면 결과값 3을 얻을 수 있다.
 
 * 10진수 뺄셈 - 결과가 음수인 경우
@@ -88,18 +89,8 @@ N진법에서 자리수가 n인 숫자 num일 때 다음식이 성립한다.
     3 \to -3 \tag{4}
     \end{align}
     $$
+    
     감수인 7의 9의 보수 2를 구하고 피감수와 더한다. 결과는 6이며 자리올림이 없기 때문에 9의 보수를 구한 뒤 부호에 $-$를 붙이면 결과값 -3을 얻을 수 있다.
-
-* 10진수 - 음수끼리 연산
-    $$
-    \begin{align}
-    -4 -7 = -11 \tag{1} \\
-    (95) + (92) = 187 \tag{2} \\
-    (1)87 \to 87 \tag{3} \\
-    87 + 1 = 88 \tag{4} \\
-    11 \to -11
-    \end{align}
-    $$
 
 * 2진수 뺄셈 - 결과가 양수인 경우
     $$
@@ -110,6 +101,7 @@ N진법에서 자리수가 n인 숫자 num일 때 다음식이 성립한다.
     1010_{(2)} + 0001_{(2)} = 1011_{(2)} \tag{4}
     \end{align}
     $$
+
     감수인 $0010_{(2)}$의 1의 보수 $1101_{(2)}$를 구하고 피감수와 더한다. 결과는 $11010_{(2)}$이며 자리올림이 발생했으므로 최상위 자리를 무시하고 $0001_{(2)}$을 더하면 결과값 $1011_{(2)}$를 얻을 수 있다.
 
 * 2진수 뺄셈 - 결과가 음수인 경우
@@ -121,6 +113,7 @@ N진법에서 자리수가 n인 숫자 num일 때 다음식이 성립한다.
     0101_{(2)} \to -0101_{(2)} \tag{3} \\
     \end{align}
     $$
+
     감수인 $1110_{(2)}$의 1의 보수 $0001_{(2)}$를 구하고 피감수와 더한다. 결과는 $1010_{(2)}$이며 자리올림이 없기 때문에 1의 보수를 구한 뒤 부호에 $-$를 붙이면 결과값 $-0101_{(2)}$를 얻을 수 있다.
 
 <br>
@@ -140,6 +133,7 @@ N진법에서 자리수가 n인 숫자 num일 때 다음식이 성립한다.
   (1)3 \to 3 \tag{3} 
   \end{align}
   $$
+
   감수인 4의 10의 보수 6을 구하고 피감수와 더한다. 결과는 13이며 자리올림이 발생했으므로 최상위 자리를 무시하면 결과값 3을 얻을 수 있다.
 
 - 10진수 뺄셈 - 결과가 음수인 경우  
@@ -151,6 +145,7 @@ N진법에서 자리수가 n인 숫자 num일 때 다음식이 성립한다.
   3 \to -3 \tag{4}
   \end{align}
   $$
+
   감수인 7의 10의 보수 3을 구하고 피감수와 더한다. 결과는 7이며 자리올림이 없으므로 10의 보수를 구한 뒤 부호에 $-$를 붙이면 결과값 -3을 얻을 수 있다.
   
 - 2진수 뺄셈 - 결과가 양수인 경우  
@@ -161,6 +156,7 @@ N진법에서 자리수가 n인 숫자 num일 때 다음식이 성립한다.
   (1)1100_{(2)} \to 1100_{(2)} \tag{3} \\
   \end{align}
   $$
+
   $0001_{(2)}$의 2의 보수 $1111_{(2)}$을 구하고 피감수와 더한다. 결과는 $11100_{(2)}$이며 자리올림이 발생했으므로 최상위 자리를 무시하면 결과값인 $1100_{(2)}$을 얻을 수 있다.
 
 - 2진수 뺄셈 - 결과가 음수인 경우  
@@ -172,6 +168,7 @@ N진법에서 자리수가 n인 숫자 num일 때 다음식이 성립한다.
   1010_{(2)} \to -1010_{(2)} \tag{4}
   \end{align}
   $$
+
   $1101_{(2)}$의 2의 보수 $0011_{(2)}$을 구하고 피감수와 더한다. 결과는 $0110_{(2)}$이며 자리올림이 없으므로 2의 보수를 구한 뒤 부호에 $-$를 붙이면 결과값인 $-1010_{(2)}$을 구할 수 있다.
 
 > 보수를 이용할 경우 뺄셈도 덧셈으로 표현 가능하며 곱셈은 덧셈의 연속 나눗셈은 뺄셈의 연속으로 표현 가능하기 때문에 덧셈만 
