--- a/math/보수.md
+++ b/math/보수.md
@@ -69,52 +69,58 @@ N진법에서 자리수가 n인 숫자 num일 때 다음식이 성립한다.
 4. 최상위 자리의 자리올림이 없는 경우 결과에 N-1의 보수를 구한 뒤 부호에 $-$를 붙인다.
 
 * 10진수 뺄셈 - 결과가 양수인 경우  
-    $$
-    \begin{align}
-    7 - 4 = 3 \\
-    7 + (5) = 12 \\
-    (1)2 \to 2 \\
-    2 + 1 = 3
-    \end{align}
-    $$
+  감수인 4의 9의 보수 5를 구하고 피감수와 더한다. 결과는 12이며 자리올림이 발생했으므로 최상위 자리를 무시하고 1을 더하면 결과값 3을 얻을 수 있다.
 
-    감수인 4의 9의 보수 5를 구하고 피감수와 더한다. 결과는 12이며 자리올림이 발생했으므로 최상위 자리를 무시하고 1을 더하면 결과값 3을 얻을 수 있다.
+  $$
+  \begin{align}
+  7 - 4 = 3 \tag{1} \\
+  7 + (5) = 12 \tag{2} \\
+  (1)2 \to 2 \tag{3} \\
+  2 + 1 = 3 \tag{4}
+  \end{align}
+  $$
 
-* 10진수 뺄셈 - 결과가 음수인 경우
-    $$
-    \begin{align}
-    4 - 7 = -3 \tag{1} \\
-    4 + (2) = 6 \tag{2} \\
-    6 \to 3 \tag{3} \\
-    3 \to -3 \tag{4}
-    \end{align}
-    $$
-    
-    감수인 7의 9의 보수 2를 구하고 피감수와 더한다. 결과는 6이며 자리올림이 없기 때문에 9의 보수를 구한 뒤 부호에 $-$를 붙이면 결과값 -3을 얻을 수 있다.
+<br>
 
-* 2진수 뺄셈 - 결과가 양수인 경우
-    $$
-    \begin{align}
-    1101_{(2)} - 0010_{(2)} = 1011_{(2)} \tag{1} \\
-    1101_{(2)} + (1101)_{(2)} = 11010_{(2)} \tag{2} \\
-    (1)1010_{(2)} \to 1010_{(2)} \tag{3} \\
-    1010_{(2)} + 0001_{(2)} = 1011_{(2)} \tag{4}
-    \end{align}
-    $$
+* 10진수 뺄셈 - 결과가 음수인 경우  
+  감수인 7의 9의 보수 2를 구하고 피감수와 더한다. 결과는 6이며 자리올림이 없기 때문에 9의 보수를 구한 뒤 부호에 $-$를 붙이면 결과값 -3을 얻을 수 있다.
+  
+  $$
+  \begin{align}
+  4 - 7 = -3 \tag{1} \\
+  4 + (2) = 6 \tag{2} \\
+  6 \to 3 \tag{3} \\
+  3 \to -3 \tag{4}
+  \end{align}
+  $$
 
-    감수인 $0010_{(2)}$의 1의 보수 $1101_{(2)}$를 구하고 피감수와 더한다. 결과는 $11010_{(2)}$이며 자리올림이 발생했으므로 최상위 자리를 무시하고 $0001_{(2)}$을 더하면 결과값 $1011_{(2)}$를 얻을 수 있다.
+<br>
 
-* 2진수 뺄셈 - 결과가 음수인 경우
-    $$
-    \begin{align}
-    1001_{(2)} - 1110_{(2)} = -0101_{(2)} \tag{1} \\
-    1001_{(2)} + (0001)_{(2)} = 1010_{(2)} \tag{2} \\
-    1010_{(2)} \to 0101_{(2)} \tag{3} \\
-    0101_{(2)} \to -0101_{(2)} \tag{3} \\
-    \end{align}
-    $$
+* 2진수 뺄셈 - 결과가 양수인 경우  
+  감수인 $0010_{(2)}$의 1의 보수 $1101_{(2)}$를 구하고 피감수와 더한다. 결과는 $11010_{(2)}$이며 자리올림이 발생했으므로 최상위 자리를 무시하고 $0001_{(2)}$을 더하면 결과값 $1011_{(2)}$를 얻을 수 있다.
+  
+  $$
+  \begin{align}
+  1101_{(2)} - 0010_{(2)} = 1011_{(2)} \tag{1} \\
+  1101_{(2)} + (1101)_{(2)} = 11010_{(2)} \tag{2} \\
+  (1)1010_{(2)} \to 1010_{(2)} \tag{3} \\
+  1010_{(2)} + 0001_{(2)} = 1011_{(2)} \tag{4}
+  \end{align}
+  $$
 
-    감수인 $1110_{(2)}$의 1의 보수 $0001_{(2)}$를 구하고 피감수와 더한다. 결과는 $1010_{(2)}$이며 자리올림이 없기 때문에 1의 보수를 구한 뒤 부호에 $-$를 붙이면 결과값 $-0101_{(2)}$를 얻을 수 있다.
+<br>
+
+* 2진수 뺄셈 - 결과가 음수인 경우  
+  감수인 $1110_{(2)}$의 1의 보수 $0001_{(2)}$를 구하고 피감수와 더한다. 결과는 $1010_{(2)}$이며 자리올림이 없기 때문에 1의 보수를 구한 뒤 부호에 $-$를 붙이면 결과값 $-0101_{(2)}$를 얻을 수 있다.
+  
+  $$
+  \begin{align}
+  1001_{(2)} - 1110_{(2)} = -0101_{(2)} \tag{1} \\
+  1001_{(2)} + (0001)_{(2)} = 1010_{(2)} \tag{2} \\
+  1010_{(2)} \to 0101_{(2)} \tag{3} \\
+  0101_{(2)} \to -0101_{(2)} \tag{3} \\
+  \end{align}
+  $$
 
 <br>
 
@@ -125,7 +131,9 @@ N진법에서 자리수가 n인 숫자 num일 때 다음식이 성립한다.
 3. 최상위 자리의 자리올림이 있는 경우 최상위 자리을 무시한다.
 4. 최상위 자리의 자리올림이 없는 경우 해당 값의 N의 보수를 계산하고 부호에 $-$를 붙인다.
 
-- 10진수 뺄셈 - 결과가 양수인 경우  
+* 10진수 뺄셈 - 결과가 양수인 경우  
+  감수인 4의 10의 보수 6을 구하고 피감수와 더한다. 결과는 13이며 자리올림이 발생했으므로 최상위 자리를 무시하면 결과값 3을 얻을 수 있다.
+
   $$
   \begin{align}
   7 - 4 = 3 \tag{1}\\
@@ -134,9 +142,11 @@ N진법에서 자리수가 n인 숫자 num일 때 다음식이 성립한다.
   \end{align}
   $$
 
-  감수인 4의 10의 보수 6을 구하고 피감수와 더한다. 결과는 13이며 자리올림이 발생했으므로 최상위 자리를 무시하면 결과값 3을 얻을 수 있다.
+<br>
 
-- 10진수 뺄셈 - 결과가 음수인 경우  
+* 10진수 뺄셈 - 결과가 음수인 경우  
+  감수인 7의 10의 보수 3을 구하고 피감수와 더한다. 결과는 7이며 자리올림이 없으므로 10의 보수를 구한 뒤 부호에 $-$를 붙이면 결과값 -3을 얻을 수 있다.
+
   $$ 
   \begin{align}
   4 - 7 = -3 \tag{1} \\
@@ -146,9 +156,11 @@ N진법에서 자리수가 n인 숫자 num일 때 다음식이 성립한다.
   \end{align}
   $$
 
-  감수인 7의 10의 보수 3을 구하고 피감수와 더한다. 결과는 7이며 자리올림이 없으므로 10의 보수를 구한 뒤 부호에 $-$를 붙이면 결과값 -3을 얻을 수 있다.
+<br>
+
+* 2진수 뺄셈 - 결과가 양수인 경우  
+  $0001_{(2)}$의 2의 보수 $1111_{(2)}$을 구하고 피감수와 더한다. 결과는 $11100_{(2)}$이며 자리올림이 발생했으므로 최상위 자리를 무시하면 결과값인 $1100_{(2)}$을 얻을 수 있다.
   
-- 2진수 뺄셈 - 결과가 양수인 경우  
   $$
   \begin{align}
   1101_{(2)} - 0001_{(2)} = 1100_{(2)} \tag{1} \\
@@ -157,9 +169,11 @@ N진법에서 자리수가 n인 숫자 num일 때 다음식이 성립한다.
   \end{align}
   $$
 
-  $0001_{(2)}$의 2의 보수 $1111_{(2)}$을 구하고 피감수와 더한다. 결과는 $11100_{(2)}$이며 자리올림이 발생했으므로 최상위 자리를 무시하면 결과값인 $1100_{(2)}$을 얻을 수 있다.
+<br>
 
-- 2진수 뺄셈 - 결과가 음수인 경우  
+* 2진수 뺄셈 - 결과가 음수인 경우  
+  $1101_{(2)}$의 2의 보수 $0011_{(2)}$을 구하고 피감수와 더한다. 결과는 $0110_{(2)}$이며 자리올림이 없으므로 2의 보수를 구한 뒤 부호에 $-$를 붙이면 결과값인 $-1010_{(2)}$을 구할 수 있다.
+
   $$
   \begin{align}
   0011_{(2)} - 1101_{(2)} = -1010_{(2)} \tag{1} \\
@@ -169,10 +183,12 @@ N진법에서 자리수가 n인 숫자 num일 때 다음식이 성립한다.
   \end{align}
   $$
 
-  $1101_{(2)}$의 2의 보수 $0011_{(2)}$을 구하고 피감수와 더한다. 결과는 $0110_{(2)}$이며 자리올림이 없으므로 2의 보수를 구한 뒤 부호에 $-$를 붙이면 결과값인 $-1010_{(2)}$을 구할 수 있다.
+<br>
 
 > 보수를 이용할 경우 뺄셈도 덧셈으로 표현 가능하며 곱셈은 덧셈의 연속 나눗셈은 뺄셈의 연속으로 표현 가능하기 때문에 덧셈만 
 가지고도 사칙연산을 모두 처리할 수 있다.
+
+<br>
 
 ### 자리올림과 부호
 
