fix: 보수 계산법 수식 추가

--- a/math/보수.md
+++ b/math/보수.md
@@ -69,7 +69,7 @@ N진법에서 자리수가 n인 숫자 num일 때 다음식이 성립한다.
 4. 최상위 자리의 자리올림이 없는 경우 결과에 N-1의 보수를 구한 뒤 부호에 $-$를 붙인다.
 
 * 10진수 뺄셈 - 결과가 양수인 경우  
-  감수인 4의 9의 보수 5를 구하고 피감수와 더한다. 결과는 12이며 자리올림이 발생했으므로 최상위 자리를 무시하고 1을 더하면 결과값 3을 얻을 수 있다.
+  $7 - 4 = 3$에서 감수인 4의 9의 보수 5를 구하고 피감수와 더한다. 결과는 12이며 자리올림이 발생했으므로 최상위 자리를 무시하고 1을 더하면 결과값 3을 얻을 수 있다.
 
 $$
 \begin{align}
@@ -83,7 +83,7 @@ $$
 <br>
 
 * 10진수 뺄셈 - 결과가 음수인 경우  
-  감수인 7의 9의 보수 2를 구하고 피감수와 더한다. 결과는 6이며 자리올림이 없기 때문에 9의 보수를 구한 뒤 부호에 $-$를 붙이면 결과값 -3을 얻을 수 있다.
+  $4 - 7 = -3$에서 감수인 7의 9의 보수 2를 구하고 피감수와 더한다. 결과는 6이며 자리올림이 없기 때문에 9의 보수를 구한 뒤 부호에 $-$를 붙이면 결과값 -3을 얻을 수 있다.
   
 $$
 \begin{align}
@@ -97,7 +97,7 @@ $$
 <br>
 
 * 2진수 뺄셈 - 결과가 양수인 경우  
-  감수인 $0010_{(2)}$의 1의 보수 $1101_{(2)}$를 구하고 피감수와 더한다. 결과는 $11010_{(2)}$이며 자리올림이 발생했으므로 최상위 자리를 무시하고 $0001_{(2)}$을 더하면 결과값 $1011_{(2)}$를 얻을 수 있다.
+  $1101_{(2)} - 0010_{(2)} = 1011_{(2)}$에서 감수인 $0010_{(2)}$의 1의 보수 $1101_{(2)}$를 구하고 피감수와 더한다. 결과는 $11010_{(2)}$이며 자리올림이 발생했으므로 최상위 자리를 무시하고 $0001_{(2)}$을 더하면 결과값 $1011_{(2)}$를 얻을 수 있다.
   
 $$
 \begin{align}
@@ -111,7 +111,7 @@ $$
 <br>
 
 * 2진수 뺄셈 - 결과가 음수인 경우  
-  감수인 $1110_{(2)}$의 1의 보수 $0001_{(2)}$를 구하고 피감수와 더한다. 결과는 $1010_{(2)}$이며 자리올림이 없기 때문에 1의 보수를 구한 뒤 부호에 $-$를 붙이면 결과값 $-0101_{(2)}$를 얻을 수 있다.
+  $1001_{(2)} - 1110_{(2)} = -0101_{(2)}$에서 감수인 $1110_{(2)}$의 1의 보수 $0001_{(2)}$를 구하고 피감수와 더한다. 결과는 $1010_{(2)}$이며 자리올림이 없기 때문에 1의 보수를 구한 뒤 부호에 $-$를 붙이면 결과값 $-0101_{(2)}$를 얻을 수 있다.
   
 $$
 \begin{align}
@@ -132,7 +132,7 @@ $$
 4. 최상위 자리의 자리올림이 없는 경우 해당 값의 N의 보수를 계산하고 부호에 $-$를 붙인다.
 
 * 10진수 뺄셈 - 결과가 양수인 경우  
-  감수인 4의 10의 보수 6을 구하고 피감수와 더한다. 결과는 13이며 자리올림이 발생했으므로 최상위 자리를 무시하면 결과값 3을 얻을 수 있다.
+  $7 - 4 = 3$에서 감수인 4의 10의 보수 6을 구하고 피감수와 더한다. 결과는 13이며 자리올림이 발생했으므로 최상위 자리를 무시하면 결과값 3을 얻을 수 있다.
 
 $$
 \begin{align}
@@ -145,7 +145,7 @@ $$
 <br>
 
 * 10진수 뺄셈 - 결과가 음수인 경우  
-  감수인 7의 10의 보수 3을 구하고 피감수와 더한다. 결과는 7이며 자리올림이 없으므로 10의 보수를 구한 뒤 부호에 $-$를 붙이면 결과값 -3을 얻을 수 있다.
+  $4 - 7 = -3$에서 감수인 7의 10의 보수 3을 구하고 피감수와 더한다. 결과는 7이며 자리올림이 없으므로 10의 보수를 구한 뒤 부호에 $-$를 붙이면 결과값 -3을 얻을 수 있다.
 
 $$
 \begin{align}
@@ -159,7 +159,7 @@ $$
 <br>
 
 * 2진수 뺄셈 - 결과가 양수인 경우  
-  $0001_{(2)}$의 2의 보수 $1111_{(2)}$을 구하고 피감수와 더한다. 결과는 $11100_{(2)}$이며 자리올림이 발생했으므로 최상위 자리를 무시하면 결과값인 $1100_{(2)}$을 얻을 수 있다.
+  $1101_{(2)} - 0001_{(2)} = 1100_{(2)}$에서 $0001_{(2)}$의 2의 보수 $1111_{(2)}$을 구하고 피감수와 더한다. 결과는 $11100_{(2)}$이며 자리올림이 발생했으므로 최상위 자리를 무시하면 결과값인 $1100_{(2)}$을 얻을 수 있다.
   
 $$
 \begin{align}
@@ -172,7 +172,7 @@ $$
 <br>
 
 * 2진수 뺄셈 - 결과가 음수인 경우  
-  $1101_{(2)}$의 2의 보수 $0011_{(2)}$을 구하고 피감수와 더한다. 결과는 $0110_{(2)}$이며 자리올림이 없으므로 2의 보수를 구한 뒤 부호에 $-$를 붙이면 결과값인 $-1010_{(2)}$을 구할 수 있다.
+  $0011_{(2)} - 1101_{(2)} = -1010_{(2)}$에서 $1101_{(2)}$의 2의 보수 $0011_{(2)}$을 구하고 피감수와 더한다. 결과는 $0110_{(2)}$이며 자리올림이 없으므로 2의 보수를 구한 뒤 부호에 $-$를 붙이면 결과값인 $-1010_{(2)}$을 구할 수 있다.
 
 $$
 \begin{align}
