fix: 보수 오탈자 수정

--- a/math/보수.md
+++ b/math/보수.md
@@ -55,7 +55,7 @@ N진법에서 자리수가 n인 숫자 num일 때 다음식이 성립한다.
 
 ## 보수를 이용한 뺄셈
 
-보수를 이용하면 덧셈으로 뺄셈을 처리할 수 있다. 계산하는 방법은 각각 다음과 같으며 주의할 점은 보수를 구할 때 자리수는 큰값에 맞춰야 한다.
+보수를 이용하면 덧셈으로 뺄셈을 처리할 수 있다. 계산하는 방법은 각각 다음과 같으며 보수를 구할 때 자리수는 큰값에 맞추는 것에 주의하자.
 
 참고로 뺄셈에서 빼지는 값을 피감수, 빼는 값을 감수라한다.
 
